modified:   .tmux.conf.2.4

--- a/.tmux.conf.2.4
+++ b/.tmux.conf.2.4
@@ -103,9 +103,8 @@ bind p paste-buffer
 set-option -g allow-rename off
 set-option -g status-right ""
 
-# 幅を等しくする
-unbind M-1
-bind C-1 select-layout even-horizontal
-# 高さを等しくする
-bind C-2 select-layout even-vertical
+#unbind M-1
+#bind C-1 select-layout even-horizontal
+#bind M-1 select-layout even-horizontal
+#bind C-2 select-layout even-vertical
 
