modified:   .tmux.conf.2.4

--- a/.tmux.conf.2.4
+++ b/.tmux.conf.2.4
@@ -88,7 +88,7 @@ bind -n C-H select-pane -t :.-
 bind -n C-l select-pane -t :.+
 
 # vi copy mode
-#setw -g mode-keys vi
+setw -g mode-keys vi
 unbind y
 bind y copy-mode
 # copy mode on osx
